--- a/style.css
+++ b/style.css
@@ -1,42 +1,64 @@
-.container {
-    max-width: 200px;
-    display: flex;
-    flex-direction: column;
-    gap: 7px;
-    border: 2px solid black;
-    border-radius: 8px;
-    padding: 7px;
-    height: 300px;
-  }
-  
-  .pantalla {
-    max-height: 250px; 
-    border: 2px solid gray;
-    padding: 5px;
-    overflow: hidden;
-    text-align: right;
-    width: auto;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-  }
-  
-  .teclado {
-    display: grid;
-    grid-template-rows: repeat(5, 1fr);
-    grid-template-columns: repeat(4, 1fr);
-    gap: 5px;
-    width: 100%;
-    height: 100%;
-  }
-  
-  .teclado > button {
-    cursor: pointer;
-    width: 100%;
-    height: 100%;
-    font-size: 14px;
-  }
-  
-  .teclado > button:nth-child(17) {
-    grid-column: span 2;
-  }
+#app {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+}
+
+#pantalla {
+  width: 47.5%;
+  padding: 0 5px;
+  text-align: right;
+  height: 20px;
+  overflow: hidden;
+ direction:rtl;
+}
+
+
+.teclado {
+  display: grid;
+  grid-template-areas:
+    'a b c'
+    'd e f'
+    'g h i'
+    'j k l'
+    'm n o'
+    'p q r'
+    's t u';
+  grid-template-columns: repeat(3, 1fr);
+  width: 50%;
+  gap: 1px;
+}
+
+#C {
+  grid-area: a;
+}
+#CE {
+  grid-area: b;
+}
+#multi {
+  grid-area: c;
+}
+#cero {
+  grid-area: q;
+}
+#suma {
+  grid-area: d;
+}
+#resta {
+  grid-area: e;
+}
+#divi {
+  grid-area: f;
+}
+#potencia{
+grid-area: s;
+}
+#cuadrado{
+grid-area: t;
+}
+
+#negativo{
+  grid-area: u;
+}
